Settings-Page, kleines Update

--- a/MobileApp/allasics.html
+++ b/MobileApp/allasics.html
@@ -27,7 +27,7 @@
             <div class="col"></div>
             <!--redirect to the main-view-->
             <div class="col">
-                <input type="button" id="settings" onclick="location.href='index.html';" value="Home" />
+                <input type="button" id="changebutton" onclick="location.href='index.html';" value="Home" />
             </div>
         </div>
 
