--- a/MobileApp/index.html
+++ b/MobileApp/index.html
@@ -1,6 +1,6 @@
 <!--
   Author: Sarah Hagenhofer
-  Lastly edited: 14.01.2023
+  Lastly edited: 21.01.2023
   Comment: Mainpage-view for the GCM Mobile-app
 -->
 
@@ -25,10 +25,10 @@
         </div>
         <!--Menu buttons -> refer to their associated html page-->
         <div class="col">
-          <input type="button" id="all" onclick="location.href='allasics.html';" value="All ASIC's" />
+          <input type="button" id="changebutton" onclick="location.href='allasics.html';" value="All ASIC's" />
         </div>
         <div class="col">
-          <input type="button" id="settings" onclick="location.href='settings.html';" value="Settings" />
+          <input type="button" id="changebutton" onclick="location.href='settings.html';" value="Settings" />
         </div>
       </div>
 
