--- a/MobileApp/settings.html
+++ b/MobileApp/settings.html
@@ -1,6 +1,6 @@
 <!--
   Author: Sarah Hagenhofer
-  Lastly edited: 14.01.2023
+  Lastly edited: 21.01.2023
   Comment: Settings-view for the GCM Mobile-app
 -->
 
@@ -27,15 +27,22 @@
         <div class="col"></div>
         <!--redirect to the main-view-->
         <div class="col">
-          <input type="button" id="settings" onclick="location.href='index.html';" value="Home" />
+          <input type="button" id="changebutton" onclick="location.href='index.html';" value="Home" />
         </div>
     </div>
 
     <hr id="seperator">
 
+    <picture>
+      <img src="pingu.jpg" class="piccenter">
+    </picture>
+
     <!--section for the main-display / existing error: not yet filled -->
-    <div class="row" id="middle">
-      <h2 class="my-auto" style="text-align: center;">[All possible settings]</h2>
+    <div class="row" id="middlesettings">
+      <input type="text" placeholder="Strompreis" id="pricesettings" style="width: 80%; height: 8%; display: block; margin-left: auto; margin-right: auto; text-align: center;">
+      <input type="text" placeholder="To be defined" style="width: 80%; height: 16%; display: block; margin-left: auto; margin-right: auto; text-align: center;">
+      <input type="text" placeholder="To be defined" style="width: 80%; height: 16%; display: block; margin-left: auto; margin-right: auto; text-align: center;">
+      <input type="color" id="colourpicker" value="#B72626"  style="width: 25%; height: 16%; display: block; margin-left: auto; margin-right: auto;" onchange="changecolour()">
     </div>
 
     <hr id="seperator">
