--- a/MobileApp/index.html
+++ b/MobileApp/index.html
@@ -13,6 +13,7 @@
 
     <link rel="manifest" href="manifest.json">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="fetchallfromdb()">
@@ -25,10 +26,10 @@
         </div>
         <!--Menu buttons -> refer to their associated html page-->
         <div class="col">
-          <input type="button" id="changebutton" onclick="location.href='allasics.html';" value="All ASIC's" />
+          <input type="button" class="loaded" id="changebutton" onclick="location.href='allasics.html';" value="All ASIC's" />
         </div>
         <div class="col">
-          <input type="button" id="changebutton" onclick="location.href='settings.html';" value="Settings" />
+          <input type="button" class="loaded" id="changebutton" onclick="location.href='settings.html';" value="Settings" />
         </div>
       </div>
 
@@ -39,7 +40,7 @@
 
         <div class="col-12 col-md-8 mx-auto d-flex justify-content-center" id="rate" onclick="switchRate()">
           <div class="my-auto" id="AktuelleRate">
-            <h2 id="textRate"></h2>
+            <h2 id="textRate">0 %</h2>
             <!--Placeholder for the chart-view / existing error: onclick does not work directly on the chart but on the div around it-->
             <div id="chartDiv" style="position: relative; height:0vh; width:0vw; margin: 0px;" onclick="switchRate()"></div>
           </div>
@@ -47,7 +48,7 @@
 
         <div class="col-12 col-md-8 mx-auto d-flex justify-content-center" id="hash" onclick="switchHash()">
           <div class="my-auto" id="HashrateMiner">
-            <h2 id="textHash"></h2>
+            <h2 id="textHash">0 TH/s</h2>
             <!--Placeholder for the chart-view / existing error: onclick does not work directly on the chart but on the div around it-->
             <div id="chartDivHash" style="position: relative; height:0vh; width:0vw; margin: 0px;" onclick="switchHash()"></div>
           </div>
@@ -55,7 +56,7 @@
 
         <div class="col-12 col-md-8 mx-auto d-flex justify-content-center" id="niederschlag" onclick="switchNiederschlag()">
           <div class="my-auto" id="AktuellerNiederschlag">
-            <h2 id="textNiedereschlag"></h2>
+            <h2 id="textNiedereschlag">0 %</h2>
             <!--Placeholder for the detailled-view -->
             <div id="wetterbericht"" style="position: relative; height:0vh; width:0vw; margin: 0px;" onclick="switchNiederschlag()"></div>
           </div>
