--- a/MobileApp/settings.html
+++ b/MobileApp/settings.html
@@ -35,7 +35,7 @@
     <br><br>
     <label class="switch" style="text-align: center;" onclick="switchTheme()">
       <input type="checkbox">
-      <span class="slider round"></span>
+      <span class="slider round" style="-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.5); box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.5);"></span>
     </label>
     <br>
     <!--
@@ -46,10 +46,10 @@
 
     <!--section for the main-display / existing error: not yet filled -->
     <div class="row" id="middlesettings">
-      <input type="text" placeholder="Strompreis" id="pricesettings" style="width: 80%; height: 8%; display: block; margin-left: auto; margin-right: auto; text-align: center; font-size: large;">
+      <input type="text" placeholder="Strompreis" id="pricesettings" style="width: 80%; height: 8%; display: block; margin-left: auto; margin-right: auto; text-align: center; font-size: large; ">
       <input type="text" placeholder="To be defined" style="width: 80%; height: 16%; display: block; margin-left: auto; margin-right: auto; text-align: center; font-size: large;">
       <input type="text" placeholder="To be defined" style="width: 80%; height: 16%; display: block; margin-left: auto; margin-right: auto; text-align: center; font-size: large;">
-      <input type="color" id="colourpicker" value="#2B2930"  style="width: 25%; height: 16%; display: block; margin-left: auto; margin-right: auto;" onchange="changecolour()">
+      <input type="color" id="colourpicker" value="#2B2930"  style="width: 25%; height: 16%; display: block; margin-left: auto; margin-right: auto; -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.5); box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.5);" onchange="changecolour()">
     </div>
 
     <hr id="seperator">
