--- a/MobileApp/index.html
+++ b/MobileApp/index.html
@@ -40,7 +40,7 @@
 
         <div class="col-12 col-md-8 mx-auto d-flex justify-content-center" id="rate" onclick="switchRate()">
           <div class="my-auto" id="AktuelleRate">
-            <h2 id="textRate">0 %</h2>
+            <h2 id="textRate">0 kW/h</h2>
             <!--Placeholder for the chart-view / existing error: onclick does not work directly on the chart but on the div around it-->
             <div id="chartDiv" style="position: relative; height:0vh; width:0vw; margin: 0px;" onclick="switchRate()"></div>
           </div>
@@ -56,7 +56,7 @@
 
         <div class="col-12 col-md-8 mx-auto d-flex justify-content-center" id="niederschlag" onclick="switchNiederschlag()">
           <div class="my-auto" id="AktuellerNiederschlag">
-            <h2 id="textNiedereschlag">0 %</h2>
+            <h2 id="textNiedereschlag">0 ml</h2>
             <!--Placeholder for the detailled-view -->
             <div id="wetterbericht"" style="position: relative; height:0vh; width:0vw; margin: 0px;" onclick="switchNiederschlag()"></div>
           </div>
