--- a/MobileApp/index.html
+++ b/MobileApp/index.html
@@ -15,6 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 </head>
 <body onload="fetchallfromdb()">
   <div class="container">
@@ -50,7 +52,8 @@
           <div class="my-auto" id="HashrateMiner">
             <h2 id="textHash">0 TH/s</h2>
             <!--Placeholder for the chart-view / existing error: onclick does not work directly on the chart but on the div around it-->
-            <div id="chartDivHash" style="position: relative; height:0vh; width:0vw; margin: 0px;" onclick="switchHash()"></div>
+            <!--<div id="chartDivHash" style="position: relative; height:0vh; width:0vw; margin: 0px;" onclick="switchHash()"></div>-->
+            <div id="chartDivHash" style="position: relative; height: 0vh; width: 0vw; margin: 0px;" onclick="switchHash()"></div>
           </div>
         </div>
 
